cluster-setup/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress
  namespace: aspnetcore
  annotations:
    kubernetes.io/ingress.class: nginx
    certmanager.k8s.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  tls:
  - hosts:
    - demo-microservices-ingress.westus2.cloudapp.azure.com
    secretName: tls-secret
  rules:
  - host: demo-microservices-ingress.westus2.cloudapp.azure.com
    http:
      paths:
      - backend:
          serviceName: aspnetcore-razorapp
          servicePort: 80
        path: /(.*)
